[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
yew-router = { git = "https://github.com/yewstack/yew/" }
log = "0.4.17"
wasm-logger = "0.2.0"